--- a/index.html
+++ b/index.html
@@ -1,21 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vijesh Krishna</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script type="text/javascript">
-        (function(){
-            emailjs.init("PQDj9ZjUm47ngC0qa");
-        })();
-    </script>
+  <!-- Basic Meta Tags -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- SEO Meta Tags -->
+  <title>Vijesh Krishna | Portfolio</title>
+  <meta name="description" content="Official portfolio of Vijesh Krishna – Full Stack Developer passionate about MERN stack, AI, and clean digital experiences.">
+  <meta name="keywords" content="Vijesh Krishna, Portfolio, Developer, MERN, Full Stack, BCA, Kotlin, React, Firebase, Netlify, Projects">
+  <meta name="author" content="Vijesh Krishna">
+
+  <!-- Open Graph Meta Tags (for LinkedIn/WhatsApp/Discord previews) -->
+  <meta property="og:title" content="Vijesh Krishna | Portfolio">
+  <meta property="og:description" content="Full Stack Developer – MERN | Kotlin | Firebase | AI Explorer">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://vijeshkrishna.netlify.app">
+  <meta property="og:image" content="https://vijeshkrishna.netlify.app/Certificates/Profile.jpeg">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- CSS & Animation Libraries -->
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+  <!-- EmailJS SDK -->
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <script>
+    (function () {
+      emailjs.init("PQDj9ZjUm47ngC0qa"); // Your actual EmailJS Public Key
+    })();
+  </script>
 </head>
+
 <body>
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
