--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta property="og:url" content="https://vijeshkrishna.netlify.app">
   <meta property="og:image" content="https://vijeshkrishna.netlify.app/Certificates/Profile.jpeg">
 
-  <meta name="google-site-verification" content="google348ea8c32e639dc0">
+  <meta name="google-site-verification" content="rvD74LPhSfSc8e1VPpq1D-LTbSnaFUZPo0qciBXebcM" />
   
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
