Updated EmailJS v4 integration and secured contact form

--- a/index.html
+++ b/index.html
@@ -1,47 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Basic Meta Tags -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Basic Meta Tags -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- SEO Meta Tags -->
-    <title>Vijesh Krishna | Portfolio</title>
-    <meta name="description" content="Official portfolio of Vijesh Krishna – Full Stack Developer passionate about MERN stack, AI, and clean digital experiences.">
-    <meta name="keywords" content="Vijesh Krishna, Portfolio, Developer, MERN, Full Stack, BCA, Kotlin, React, Firebase, Netlify, Projects">
-    <meta name="author" content="Vijesh Krishna">
+  <!-- SEO Meta Tags -->
+  <title>Vijesh Krishna | Portfolio</title>
+  <meta name="description" content="Official portfolio of Vijesh Krishna – Full Stack Developer passionate about MERN stack, AI, and building user-friendly digital experiences.">
+  <meta name="keywords" content="Vijesh Krishna, Portfolio, Developer, MERN, Full Stack, BCA, Kotlin, React, Firebase, Netlify, Projects">
+  <meta name="author" content="Vijesh Krishna">
 
-    <!-- Open Graph Meta Tags (for LinkedIn/WhatsApp/Discord previews) -->
-    <meta property="og:title" content="Vijesh Krishna | Portfolio">
-    <meta property="og:description" content="Full Stack Developer – MERN | Kotlin | Firebase | AI Explorer">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://vijeshkrishna.netlify.app">
-    <meta property="og:image" content="https://vijeshkrishna.netlify.app/Certificates/Profile.jpeg">
+  <!-- Open Graph Meta Tags (for LinkedIn/WhatsApp/Discord previews) -->
+  <meta property="og:title" content="Vijesh Krishna | Portfolio">
+  <meta property="og:description" content="Full Stack Developer – MERN | Kotlin | Firebase | AI Explorer">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://vijeshkrishna.netlify.app">
+  <meta property="og:image" content="https://vijeshkrishna.netlify.app/Certificates/Profile.jpeg">
 
-    <meta name="google-site-verification" content="rvD74LPhSfSc8e1VPpq1D-LTbSnaFUZPo0qciBXebcM" />
-    
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="rvD74LPhSfSc8e1VPpq1D-LTbSnaFUZPo0qciBXebcM" />
 
-    <!-- CSS & Animation Libraries -->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!-- Fonts & Icons -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-    <!-- EmailJS SDK -->
-    <script type="module">
-        import emailjs from 'https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js';
+  <!-- AOS Animations -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-        emailjs.init('PQDj9ZjUm47ngC0qa');
-        window.emailjs = emailjs; // make it accessible globally
-    </script>
+  <!-- Main CSS -->
+  <link rel="stylesheet" href="style.css">
 
-    <script>
-        (function () {
-        emailjs.init("PQDj9ZjUm47ngC0qa"); // Your actual EmailJS Public Key
-        })();
-    </script>
+  <!-- JavaScript Libraries & App Code -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/tengbao/vanta/dist/vanta.net.min.js"></script>
+
+  <!-- ✅ Load main logic (EmailJS v4 import happens here) -->
+  <script type="module" src="script.js"></script>
 </head>
+
 
 <body>
     <!-- Navigation -->
