--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- SEO Meta Tags -->
   <title>Vijesh Krishna | Portfolio</title>
-  <meta name="description" content="Official portfolio of Vijesh Krishna – Full Stack Developer passionate about MERN stack, AI, and clean digital experiences.">
+  <meta name="description" content="Official portfolio of Vijesh Krishna – Full Stack Developer passionate about MERN stack, AI, and building user-friendly digital experiences.">
   <meta name="keywords" content="Vijesh Krishna, Portfolio, Developer, MERN, Full Stack, BCA, Kotlin, React, Firebase, Netlify, Projects">
   <meta name="author" content="Vijesh Krishna">
 
@@ -18,24 +18,28 @@
   <meta property="og:url" content="https://vijeshkrishna.netlify.app">
   <meta property="og:image" content="https://vijeshkrishna.netlify.app/Certificates/Profile.jpeg">
 
+  <!-- Google Site Verification -->
   <meta name="google-site-verification" content="rvD74LPhSfSc8e1VPpq1D-LTbSnaFUZPo0qciBXebcM" />
-  
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-  <!-- CSS & Animation Libraries -->
-  <link rel="stylesheet" href="style.css">
+  <!-- Fonts & Icons -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+  <!-- AOS Animations -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-  <!-- EmailJS SDK -->
-  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-  <script>
-    (function () {
-      emailjs.init("PQDj9ZjUm47ngC0qa"); // Your actual EmailJS Public Key
-    })();
-  </script>
+  <!-- Main CSS -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- JavaScript Libraries & App Code -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/tengbao/vanta/dist/vanta.net.min.js"></script>
+
+  <!-- ✅ Load main logic (EmailJS v4 import happens here) -->
+  <script type="module" src="script.js"></script>
 </head>
+
 
 <body>
     <!-- Navigation -->
