Updated GitHub URL

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <span class="logo-text">0773H-VJ</span>
+                <span class="logo-text">VJ</span>
             </div>
             <ul class="nav-menu" id="nav-menu">
                 <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
@@ -630,7 +630,7 @@
                     <p>&copy; 2025 Vijesh Krishna. All rights reserved.</p>
                 </div>
                 <div class="social-links">
-                    <a href="https://github.com/0773H-VJ" target="_blank" class="social-link">
+                    <a href="https://github.com/Vijesh-Krishna" target="_blank" class="social-link">
                         <i class="fab fa-github"></i>
                     </a>
                     <a href="https://linkedin.com/in/vijesh-krishna" target="_blank" class="social-link">
