--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
                     <h3>Backend Development</h3>
                     <div class="skill-tags">
                         <span class="skill-tag">Python</span>
-                        <span class="skill-tag">Node.js</span>
+                        <!-- <span class="skill-tag">Node.js</span>
                         <span class="skill-tag">Express.js</span>
-                        <span class="skill-tag">REST APIs</span>
+                        <span class="skill-tag">REST APIs</span> -->
                     </div>
                 </div>
                 <div class="skills-category" data-aos="fade-up" data-aos-delay="300">
@@ -223,43 +223,52 @@
                 <div class="section-line"></div>
             </div>
             <div class="projects-grid">
-                <!-- <div class="project-card" data-aos="fade-up" data-aos-delay="100">
+
+                <div class="project-card" data-aos="fade-up" data-aos-delay="600">
                     <div class="project-image">
-                        <i class="fas fa-comments"></i>
+                        <i class="fas fa-chart-line"></i>
                     </div>
                     <div class="project-content">
-                        <h3>Real-Time Chat Application</h3>
-                        <p>Secure full-stack chat application built with MERN stack, featuring real-time communication using Socket.io and JWT authentication.</p>
+                        <h3>Soochna Mitra – MGNREGA Dashboard</h3>
+                        <p>
+                            A user-friendly dashboard built for the Bharat Fellowship 2026 take-home project,
+                            visualizing MGNREGA district-level data with location-based insights,
+                            bilingual explanations, and reliable government data access.
+                        </p>
                         <div class="project-tech">
-                            <span>MongoDB</span>
-                            <span>Express.js</span>
-                            <span>React</span>
-                            <span>Node.js</span>
-                            <span>Socket.io</span>
+                            <span>React.js</span>
+                            <span>Tailwind CSS</span>
+                            <span>FastAPI</span>
+                            <span>Redis</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link"><i class="fab fa-github"></i></a>
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Vijesh-Krishna/soochna-mitra" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://soochna-mitra.vercel.app/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
-                <div class="project-card in-progress" data-aos="fade-up" data-aos-delay="400">
+
+                
+
+                <div data-aos="fade-up" data-aos-delay="400">
                     <div class="project-image">
                         <i class="fas fa-robot"></i>
                     </div>
                     <div class="project-content">
-                        <h3>Smart Support Website <span class="status-badge">In Progress</span></h3>
+                        <h3>Smart Support Website</h3>
                         <p>AI-powered support system utilizing LangChain and RAG technologies for intelligent customer assistance and automated responses.</p>
                         <div class="project-tech">
+                            <span>Python</span>
                             <span>LangChain</span>
                             <span>RAG</span>
-                            <span>Python</span>
+                            <span>React.js</span>
+                            <span>Tailwind CSS</span>
                             <!-- <span>AI/ML</span> -->
                         </div>
-                        <!-- <div class="project-links">
-                            <a href="#" class="project-link"><i class="fab fa-github"></i></a>
-                        </div> -->
+                        <div class="project-links">
+                            <a href="https://github.com/Vijesh-Krishna/Smart-Support-System.git" class="project-link"><i class="fab fa-github"></i></a>
+                        </div>
                     </div>
                 </div>
 
@@ -516,7 +525,7 @@
                         <h3>Bachelor of Computer Applications (BCA)</h3>
                         <h4>Kristu Jayanti College, Autonomous</h4>
                         <span class="timeline-date">2022 - 2025</span>
-                        <p>CGPA: 7.98</p>
+                        <p>CGPA: 8.07</p>
                         <!-- <p>Currently pursuing BCA with focus on software development, database management, and emerging technologies.</p> -->
                     </div>
                 </div>
